Refuse cleartext in release builds; add the open-source repository surface
Fourth audit pass ahead of V1, plus everything a public repository needs.

The one real security finding: plugins/with-system-ca-only.js emitted a single
network security config with cleartextTrafficPermitted="true", which applied to
release APKs as well as debug ones — the app's own HTTPS validation was the only
thing standing between a release build and plaintext HTTP. It now writes two
configs scoped by source set: main refuses cleartext, debug permits it and trusts
user-installed CAs. Verified in the generated Android project.

Also fixed: ESLint failed on gitignored agent scratch space (.claude/**) and
warned 45 times about import/first in test files, where jest.mock hoisting makes
a body-level import deliberate — silenced at the rule, scoped to tests, with the
reason in a comment. app.json declared userInterfaceStyle: "automatic", which
prebuild warned needs expo-system-ui and so was never applied; the value is the
platform default and the theme reads useColorScheme() directly, so the key is
gone rather than the dependency added. .gitignore and the index disagreed about
mockups/ and .claude. ARCHITECTURE.md §7 still described the database as
plaintext.

New: LICENSE (MIT), README rewrite with the architecture, request-lifecycle and
tool-approval diagrams, SECURITY.md, CONTRIBUTING.md, CODE_OF_CONDUCT.md,
CHANGELOG.md, .gitattributes, issue forms, PR template, and Dependabot pinned to
monthly with Expo-owned packages and semver-majors ignored so V1 is not
destabilised by a bot.

No .env.example: the app reads no environment variables at all, and documenting
a mechanism that does not exist is worse than documenting its absence, which the
README now does.

docs/flaws.md gains §2.10-§2.13 and §6. §6 is the honest record of why the local
release APK is unverified rather than passing: an empty NDK directory, a JDK too
new for AGP, a project path containing a space that React Native's bundle t